--- a/index.html
+++ b/index.html
@@ -245,6 +245,10 @@
                             <div class="components-item-wrap">
                                 <img
                                     class="image-components"
+                                    srcset="
+                                        ./images/ingridient-1.png    1x,
+                                        ./images/ingridient-1@2x.png 2x
+                                    "
                                     src="./images/ingridient-1.png"
                                     alt="MILK CHOCOLATE"
                                     width="214"
@@ -281,6 +285,10 @@
                             <div class="components-item-wrap">
                                 <img
                                     class="image-components"
+                                    srcset="
+                                        ./images/ingridient-2.png    1x,
+                                        ./images/ingridient-2@2x.png 2x
+                                    "
                                     src="./images/ingridient-2.png"
                                     alt="MILK"
                                     width="220"
@@ -315,6 +323,10 @@
                             <div class="components-item-wrap">
                                 <img
                                     class="image-components"
+                                    srcset="
+                                        ./images/ingridient-3.png    1x,
+                                        ./images/ingridient-3@2x.png 2x
+                                    "
                                     src="./images/ingridient-3.png"
                                     alt="NUTS"
                                     width="214"
@@ -349,6 +361,10 @@
                             <div class="components-item-wrap">
                                 <img
                                     class="image-components"
+                                    srcset="
+                                        ./images/ingridient-4.png    1x,
+                                        ./images/ingridient-4@2x.png 2x
+                                    "
                                     src="./images/ingridient-4.png"
                                     alt="SEMI - SWEET CHOCOLATE"
                                     width="214"
@@ -385,6 +401,10 @@
                             <div class="components-item-wrap">
                                 <img
                                     class="image-components"
+                                    srcset="
+                                        ./images/ingridient-5.png    1x,
+                                        ./images/ingridient-5@2x.png 2x
+                                    "
                                     src="./images/ingridient-5.png"
                                     alt="CACAO"
                                     width="214"
@@ -420,6 +440,10 @@
                             <div class="components-item-wrap">
                                 <img
                                     class="image-components"
+                                    srcset="
+                                        ./images/ingridient-6.png    1x,
+                                        ./images/ingridient-6@2x.png 2x
+                                    "
                                     src="./images/ingridient-6.png"
                                     alt="RASPBERRY"
                                     width="214"
@@ -455,6 +479,10 @@
                             <div class="components-item-wrap">
                                 <img
                                     class="image-components"
+                                    srcset="
+                                        ./images/ingridient-7.png    1x,
+                                        ./images/ingridient-7@2x.png 2x
+                                    "
                                     src="./images/ingridient-7.png"
                                     alt="COCONUT OIL"
                                     width="214"
@@ -506,7 +534,6 @@
                                 <iframe
                                     src="https://www.youtube.com/embed/ZtMfiWDQHT8?autoplay=1"
                                     frameborder="0"
-                                    allowfullscreen=""
                                 ></iframe>
                             </div>
                         </div>
@@ -555,6 +582,10 @@
                             <img
                                 width="230"
                                 height="201"
+                                srcset="
+                                    ./images/product-1.jpg    1x,
+                                    ./images/product-1@2x.jpg 2x
+                                "
                                 src="./images/product-1.jpg"
                                 alt=""
                                 class="our-product-image"
@@ -571,6 +602,10 @@
                             <img
                                 width="230"
                                 height="201"
+                                srcset="
+                                    ./images/product-2.jpg    1x,
+                                    ./images/product-2@2x.jpg 2x
+                                "
                                 src="./images/product-2.jpg"
                                 alt=""
                                 class="our-product-image"
@@ -587,6 +622,10 @@
                             <img
                                 width="230"
                                 height="201"
+                                srcset="
+                                    ./images/product-3.jpg    1x,
+                                    ./images/product-3@2x.jpg 2x
+                                "
                                 src="./images/product-3.jpg"
                                 alt=""
                                 class="our-product-image"
@@ -603,6 +642,10 @@
                             <img
                                 width="230"
                                 height="201"
+                                srcset="
+                                    ./images/product-4.jpg    1x,
+                                    ./images/product-4@2x.jpg 2x
+                                "
                                 src="./images/product-4.jpg"
                                 alt=""
                                 class="our-product-image"
@@ -619,6 +662,10 @@
                             <img
                                 width="230"
                                 height="201"
+                                srcset="
+                                    ./images/product-5.jpg    1x,
+                                    ./images/product-5@2x.jpg 2x
+                                "
                                 src="./images/product-5.jpg"
                                 alt=""
                                 class="our-product-image"
@@ -635,6 +682,10 @@
                             <img
                                 width="230"
                                 height="201"
+                                srcset="
+                                    ./images/product-6.jpg    1x,
+                                    ./images/product-6@2x.jpg 2x
+                                "
                                 src="./images/product-6.jpg"
                                 alt=""
                                 class="our-product-image"
@@ -651,6 +702,10 @@
                             <img
                                 width="230"
                                 height="201"
+                                srcset="
+                                    ./images/product-7.jpg    1x,
+                                    ./images/product-7@2x.jpg 2x
+                                "
                                 src="./images/product-7.jpg"
                                 alt=""
                                 class="our-product-image"
@@ -667,6 +722,10 @@
                             <img
                                 width="230"
                                 height="201"
+                                srcset="
+                                    ./images/product-8.jpg    1x,
+                                    ./images/product-8@2x.jpg 2x
+                                "
                                 src="./images/product-8.jpg"
                                 alt=""
                                 class="our-product-image"
@@ -692,8 +751,12 @@
                         <li class="top-sellers-item">
                             <div class="overley-top-sellers-wrap">
                                 <img
+                                    srcset="
+                                        ./images/card-1.jpg    1x,
+                                        ./images/card-1@2x.jpg 2x
+                                    "
                                     src="./images/card-1.jpg"
-                                    alt=""
+                                    alt="top-sellers-one"
                                     class="image-top-sellers"
                                 />
                                 <div class="overley-top-sellers-box">
@@ -718,8 +781,12 @@
                         <li class="top-sellers-item">
                             <div class="overley-top-sellers-wrap">
                                 <img
+                                    srcset="
+                                        ./images/card-2.jpg    1x,
+                                        ./images/card-2@2x.jpg 2x
+                                    "
                                     src="./images/card-2.jpg"
-                                    alt=""
+                                    alt="top-sellers-two"
                                     class="image-top-sellers"
                                 />
                                 <div class="overley-top-sellers-box">
@@ -742,8 +809,12 @@
                         <li class="top-sellers-item">
                             <div class="overley-top-sellers-wrap">
                                 <img
+                                    srcset="
+                                        ./images/card-3.jpg    1x,
+                                        ./images/card-3@2x.jpg 2x
+                                    "
                                     src="./images/card-3.jpg"
-                                    alt=""
+                                    alt="top-sellers-three"
                                     class="image-top-sellers"
                                 />
                                 <div class="overley-top-sellers-box">
@@ -777,6 +848,10 @@
                     <ul class="reviews-list">
                         <li class="review-item">
                             <img
+                                srcset="
+                                    ./images/person-1.png    1x,
+                                    ./images/person-1@2x.png 2x
+                                "
                                 src="./images/person-1.png"
                                 alt=""
                                 class="image-reviews"
@@ -794,6 +869,10 @@
                         </li>
                         <li class="review-item">
                             <img
+                                srcset="
+                                    ./images/person-2.png    1x,
+                                    ./images/person-2@2x.png 2x
+                                "
                                 src="./images/person-2.png"
                                 alt=""
                                 class="image-reviews"
@@ -812,6 +891,10 @@
                         </li>
                         <li class="review-item">
                             <img
+                                srcset="
+                                    ./images/person-3.png    1x,
+                                    ./images/person-3@2x.png 2x
+                                "
                                 src="./images/person-3.png"
                                 alt=""
                                 class="image-reviews"
@@ -933,6 +1016,7 @@
                     <form class="footer-form">
                         <label class="footer-label" for="subscribe">
                             <input
+                                id="subscribe"
                                 class="footer-email"
                                 type="email"
                                 placeholder="Enter your email"
@@ -1024,7 +1108,6 @@
                             type="checkbox"
                             value="true"
                             name="user-privacy"
-                            value="true"
                         />
                         <label
                             class="modal-label label-checkbox"
@@ -1039,9 +1122,8 @@
                                     <use
                                         href="./images/icons.svg#icon-checkmark"
                                     ></use>
-                                </svg>
-                            </span>
-                            I accept the terms and conditions of the
+                                </svg> </span
+                            >I accept the terms and conditions of the
                             <a
                                 class="privacy-policy-link header-accent"
                                 href=""
