--- a/index.html
+++ b/index.html
@@ -524,16 +524,27 @@
                     <div class="how-made-wrap">
                         <div class="frame-box">
                             <button class="play-btn" id="playButton">
-                                <svg class="icon-play" width="44" height="44">
-                                    <use
-                                        href="./images/icons.svg#icon-play"
-                                    ></use>
-                                </svg>
+                                <span class="play-btn-wrap">
+                                    <svg
+                                        class="icon-play"
+                                        width="41"
+                                        height="44"
+                                    >
+                                        <use
+                                            href="./images/icons.svg#icon-play"
+                                        ></use>
+                                    </svg>
+                                </span>
                             </button>
                             <div class="frame-overley" id="videoOverlay">
                                 <iframe
-                                    src="https://www.youtube.com/embed/ZtMfiWDQHT8?autoplay=1"
+                                    width="560"
+                                    height="315"
+                                    src="https://www.youtube.com/embed/ZtMfiWDQHT8"
+                                    title="YouTube video player"
                                     frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    allowfullscreen
                                 ></iframe>
                             </div>
                         </div>
